currency replace empty string with zero

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vue-excel-editor",
+  "name": "vue-excel-editor-sae",
   "email": "apple.6502@gmail.com",
   "description": "Vue2 plugin for displaying and editing the array-of-object in Excel style",
-  "version": "1.4.4",
+  "version": "0.1.4",
   "main": "src/main.js",
   "dependencies": {
     "moment": "^2.24.0",
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cscan/vue-excel-editor.git"
+    "url": "git+https://github.com/suryasarafe/vue-excel-editor.git"
   },
   "keywords": [
     "vue",
@@ -62,7 +62,7 @@
   "author": "Kenneth Cheng",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/cscan/vue-excel-editor/issues"
+    "url": "https://github.com/suryasarafe/vue-excel-editor/issues"
   },
-  "homepage": "https://github.com/cscan/vue-excel-editor#readme"
+  "homepage": "https://github.com/suryasarafe/vue-excel-editor#readme"
 }
